# ShrykeWindgrace.github.io

./: .envrc  .gitignore  .justfile  Makefile  blog.cabal  contact.markdown  flake.nix  site.hs  stack.yaml
css/: default.css
docs/: about.html  archive.html  atom.xml  contact.html  index.html  rss.xml
docs/css/: default.css  syntax.css
docs/posts/: Cosine33.html  Olympics.html  SelectT.html  Seventh.html  UnicodeInput.html  example.html  the45.html
docs/tags/: Haskell.html  QMK.html  another.html  hardware.html  maths.html  ru.html  test.html  tikz.html  unicode.html  windows.html
drafts/: FoxAndRabbit.md  Olympics4.md  latex.md  olimpiada_9_delenie_na_9.md  stash.txt
latex/astroid/: astroid.tex
latex/cosine33/: Cosine.tex  ref.bib
latex/olympic/: 2001.tex  2k.tex  9999.tex  ParTri.tex  polynomial.tex  powers.tex
latex/the45/: the45.tex
posts/: Cosine33.md  Olympics.md  RPS.md  SelectT.md  Seventh.md  UnicodeInput.md  example.markdown  the45.md
src/: Feeds.hs  SvgWorks.hs  Utils.hs  site.hs
templates/: default.html  post.html  tikz.tex
