name:                blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      src
  main-is:             site.hs
  other-modules:       
    Feeds, 
    Utils,
    SvgWorks
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       pandoc-types,
                       uri-encode,
                       bytestring,
                       text,
                       --hakyll-process,
                       temporary,
                       mtl,
                       shake,
                       directory

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
